:rocket: 创建文件目录

--- a/tsconfig.path.json
+++ b/tsconfig.path.json
@@ -1,13 +1,15 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@component/*": [
-        "src/component/*"
-      ]
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"],
+            "@component/*": ["src/component/*"],
+            "@style/*": ["src/style/*"],
+            "@config/*": ["src/config/*"],
+            "@layout/*": ["src/layout/*"],
+            "@hooks/*": ["src/hooks/*"],
+            "@router/*": ["src/router/*"],
+            "@store/*": ["src/store/*"]
+        }
     }
-  }
 }
