--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.1.1",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
     "babel-plugin-import": "^1.13.3"
   }
