--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.2.6",
     "craco-less": "^1.17.1",
     "eslint": "^7.22.0",
+    "nanoid": "^3.1.22",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
