--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
@@ -65,6 +66,7 @@
     "@craco/craco": "^6.1.1",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-transition-group": "^4.4.1",
     "babel-plugin-import": "^1.13.3"
   }
 }
