--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@types/classnames": "^2.2.11",
         "@types/jest": "^26.0.15",
         "@types/js-cookie": "^2.2.6",
+        "@types/lodash": "^4.14.168",
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
@@ -18,10 +19,12 @@
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
         "antd": "^4.14.1",
+        "axios": "^0.21.1",
         "classnames": "^2.2.6",
         "craco-less": "^1.17.1",
         "eslint": "^7.22.0",
         "js-cookie": "^2.2.1",
+        "lodash": "^4.17.21",
         "nanoid": "^3.1.22",
         "prettier": "^2.2.1",
         "react": "^17.0.2",
@@ -64,6 +67,7 @@
     },
     "devDependencies": {
         "@craco/craco": "^6.1.1",
+        "@types/axios": "^0.14.0",
         "@types/react-helmet": "^6.1.0",
         "@types/react-router-dom": "^5.1.7",
         "@types/react-transition-group": "^4.4.1",
